fix draggable mirror z-index

--- a/resources/css/core/layout.css
+++ b/resources/css/core/layout.css
@@ -66,6 +66,13 @@ a {
     display: none;
 }
 
+/* Draggable Mirrors
+  ========================================================================== */
+
+/* Mirrors that have been appended to the body should appear on top of everything. (Portals are 4) */
+body > .draggable-mirror {
+    z-index: 5;
+}
 
 /* Outside the Control Panel
   ========================================================================== */
